# endogenous_innovation_and_preference_change

./: .gitignore  README.md  main.py  model_playground.ipynb  posterior_model.pt  profile_results.prof  pyproject.toml  requirements.txt
package/analysis/: 2D_low_policy_intensity_gen.py  2D_low_policy_intensity_plot.py  BAU_outcoems_gen.py  BAU_outcomes_gen.py  BAU_outcomes_plot.py  DUAL_2D_low_policy_intensity_plot.py  all_policies_welfare_emissions.py  carbon_tax_type_gen.py  endogenous_policy_intensity_gen.py  endogenous_policy_intensity_pair_gen.py  endogenous_policy_intensity_pair_plot.py  endogenous_policy_intensity_single_gen.py  endogenous_policy_intensity_single_plot.py  gather_time_serie_data_decomposition_gen.py  grid_search_policy_intensity_pair_gen.py  grid_tandem_gen.py  grid_tandem_plot.py  low_policy_intensity_gen.py  low_policy_intensity_plot.py  minimize_init_guess.json  minimize_policy_intensity_pair_gen.py  outputs.pkl  policy_bounds.json  policy_bounds_endog_single_gen.json  policy_bounds_policy_package_gen.json  policy_bounds_vary_carbon_tax_type.json  policy_bounds_vary_pair_policy_gen.json  policy_bounds_vary_policy_2D_gen.json  policy_bounds_vary_single_policy_gen.json  policy_package_gen.py  policy_package_plot.py  scenario_gen.py  scenario_plot.py  scenario_tests_gen.py  scenario_tests_plot.py  show_BAU_rebate_plot.py  single_policies_time_series_gen.py  single_policies_time_series_plot.py  synergy_check_gen.py  synergy_check_plot.py  (+11 more)
package/calibration/: MAPE_ev_prop_2D_gen.py  MAPE_ev_prop_2D_plot.py  MAPE_ev_prop_3D_gen.py  fit_distance.py  (+20 more)
(+343 files in other folders)
